--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /node_modules
 /.pnp
 .pnp.js
+node_modules
 
 # testing
 /coverage
@@ -12,6 +13,9 @@
 /build
 
 # misc
+
+.env
+
 .DS_Store
 .env.local
 .env.development.local
@@ -22,4 +26,3 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-firebase.js
